--- a/Aufgabe_4/stylesheet.css
+++ b/Aufgabe_4/stylesheet.css
@@ -17,7 +17,7 @@
         color: navy;
     }
 
-  .button {
+  .button{
   background-color: #4caf4f00; /* Green */
   border: none;
   color: white;
@@ -42,18 +42,19 @@
 .button1:hover {
   font-weight:bolder;
   color: #008CBA;
-
 }
 
 .button2 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #008CBA;
+
+  font-weight: 600;
+  color: black;
+  border: 4px solid #008CBA;
+  border-radius: 4px;
 }
 
 .button2:hover {
-  background-color: #008CBA;
-  color: white;
+  font-weight: bolder;
+  color: #008CBA;
 }
 
 .button3 {
@@ -67,14 +68,12 @@
   color: white;
 }
 
-.header{
+header{
     margin: auto;
     padding: 15px;
-    padding-left: 20px;
     background-image: url(foto/cube_repeat.jpg);
     background-position: inherit;
     height: 400px;
-    width: 100%;
     color: navy;
     font-size: 18px;
     font-family: 'Courier New';
@@ -82,27 +81,28 @@
 
 .main{
     
+    padding: auto;
     max-width: 800px;
     margin: auto;
     margin-bottom: 4%;
 
 }
 
-.footer{
+footer{
 
     font-family: 'Courier New';
     background-color: #eaeaea;
     padding: 15px;
-    margin: auto;
+    height: 200px;
     color: navy;
-    border: 2px solid black;
+    
 }
 .footerbox{
-    max-width: 800px;
-    float: left;
-    width: 33%;
+    max-width: 200px;
+    max-height: 150px;
     margin-right: 2%;
-    padding: 60px;
+    margin-left: 2%;
+    padding: 10px;
     background: #eaeaea;
     border: 2px solid black;
 }
