--- a/Aufgabe_4/stylesheet.css
+++ b/Aufgabe_4/stylesheet.css
@@ -1,6 +1,7 @@
 
 
   body{
+
       background-color: #008cffcc;
       background-image: linear-gradient(rgb(0, 191, 255),rgb(255, 255, 255));
       margin: auto;
@@ -18,25 +19,27 @@
     }
 
   .button{
-  background-color: #4caf4f00; /* Green */
+
+  background-color: #ffffff00; /* none */
   border: none;
   color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 32px;
   margin: 4px 2px;
   transition-duration: 0.2s;
   cursor: pointer;
   font-family: 'Courier New';
+  
 }
 
 .button1 {
   font-weight: 600;
   color: black;
-  border: 4px solid #008CBA;
-  border-radius: 4px;
+  float: left;
+  margin-top: 2%;
   }
 
 .button1:hover {
@@ -45,16 +48,16 @@
 }
 
 .button2 {
-
-  font-weight: 600;
-  color: black;
-  border: 4px solid #008CBA;
-  border-radius: 4px;
+    margin-top: 2%;
+    float: right;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    border-radius: 4px;
 }
 
 .button2:hover {
   font-weight: bolder;
-  color: #008CBA;
+  color: black;
 }
 
 .button3 {
@@ -80,7 +83,7 @@ header{
 }
 
 .main{
-    
+
     padding: auto;
     max-width: 800px;
     margin: auto;
@@ -95,9 +98,11 @@ footer{
     padding: 15px;
     height: 200px;
     color: navy;
-    
+    align-items: center;
 }
 .footerbox{
+
+    
     max-width: 200px;
     max-height: 150px;
     margin-right: 2%;
@@ -105,4 +110,5 @@ footer{
     padding: 10px;
     background: #eaeaea;
     border: 2px solid black;
+
 }
