--- a/Aufgabe_4/stylesheet.css
+++ b/Aufgabe_4/stylesheet.css
@@ -4,19 +4,16 @@
 
       background-color: #008cffcc;
       background-image: linear-gradient(rgb(0, 191, 255),rgb(255, 255, 255));
-      margin: auto;
+      margin: 0;
 
     }
 
   h1,h2,h3,h4,h5,h6{
     color: black;
     word-spacing: 2px;
+    margin: auto;
+    font-family: 'Courier New';
   }
-    p{
-        margin: auto;
-        font-family: 'Courier New';
-        color: navy;
-    }
 
   .button{
 
@@ -46,6 +43,7 @@
 .button1:hover {
   font-weight:bolder;
   color: aqua;
+  transform: scale(1.3);
 }
 
 .button2 {
@@ -59,6 +57,7 @@
 .button2:hover {
   font-weight: bolder;
   color: black;
+  transform: scale(1.2);
 }
 
 .button3 {
@@ -83,10 +82,25 @@ header{
     font-size: 18px;
     font-family: 'Courier New';
 }
+img{
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  margin-top: auto;
+  width: 50%;
+
+}
+video{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 .main{
 
-    align-items: center;
     padding: auto;
     max-width: 800px;
     margin: auto;
@@ -96,25 +110,31 @@ header{
 
 footer{
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: auto;
     padding: auto;
     font-family: 'Courier New';
     background-color: #eaeaea;
     padding: 15px;
-    height: 200px;
+    min-height: 200px;
     color: navy;
-    align-items: center;
+    
+    
 }
 .footerbox{
-
-    float: left;
-    position: relative;
+  
+    font-family:'Impact';
+    width: 50%;
+    margin: auto;    
+    bottom: 25px;
     max-width: 200px;
     max-height: 150px;
     margin-right: 2%;
     margin-left: 2%;
     padding: 10px;
     background: #eaeaea;
-    border: 2px solid black;
-
+/*    border: 2px solid black;
+*/
 }
