--- a/Aufgabe_4/stylesheet.css
+++ b/Aufgabe_4/stylesheet.css
@@ -3,7 +3,7 @@
   body{
 
       background-color: #008cffcc;
-      background-image: linear-gradient(rgb(0, 191, 255),rgb(255, 255, 255));
+      background-image: linear-gradient(rgb(75, 210, 255),rgb(255, 255, 255));
       margin: 0;
 
     }
@@ -82,6 +82,7 @@ header{
     font-size: 18px;
     font-family: 'Courier New';
 }
+
 img{
 
   display: block;
@@ -92,6 +93,34 @@ img{
   width: 50%;
 
 }
+
+img:hover{
+
+  transform: scale(1.2);
+
+}
+
+img:not(img:hover){
+  
+  opacity:50%;
+
+}
+
+
+
+a img[src$=".svg"]{
+
+  opacity: 25%;
+
+}
+
+a img[src$=".svg"]:hover{
+
+  opacity: 100%;
+  transform: scale(1.2);
+
+}
+
 video{
   display: block;
   margin-left: auto;
@@ -113,16 +142,16 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
-    padding: auto;
     font-family: 'Courier New';
     background-color: #eaeaea;
-    padding: 15px;
+    padding: auto;
+    margin: auto;
     min-height: 200px;
     color: navy;
     
     
 }
+
 .footerbox{
   
     color: black;
@@ -130,11 +159,11 @@ footer{
     width: 50%;
     margin: auto;    
     bottom: 25px;
+    padding: auto;
     max-width: 200px;
     max-height: 150px;
     margin-right: 2%;
     margin-left: 2%;
-    padding: 10px;
     background: #eaeaea;
 
 /*    border: 2px solid black;
