--- a/Aufgabe_4/stylesheet.css
+++ b/Aufgabe_4/stylesheet.css
@@ -29,7 +29,7 @@
   margin: 4px 2px;
   transition-duration: 0.2s;
   cursor: pointer;
-  font-family: 'Courier New';
+  font-family: 'Comic sans ms';
   
 }
 
@@ -91,20 +91,23 @@ img{
   margin-bottom: auto;
   margin-top: auto;
   width: 50%;
+  transition: 0.2s;
 
 }
 
 img:hover{
-
+  
   transform: scale(1.2);
 
 }
 
-img:not(img:hover){
-  
-  opacity:50%;
+img:nth-child(:not){
+
+  opacity: 50%;
 
 }
+
+
 
 
 
@@ -142,7 +145,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Courier New';
+    font-family: '';
     background-color: #eaeaea;
     padding: auto;
     margin: auto;
@@ -155,7 +158,7 @@ footer{
 .footerbox{
   
     color: black;
-    font-family:'Courier New';
+    font-family:'Comic Sans MS';
     width: 50%;
     margin: auto;    
     bottom: 25px;
