--- a/Aufgabe_5/stylesheet.css
+++ b/Aufgabe_5/stylesheet.css
@@ -31,6 +31,7 @@
   transition-duration: 0.2s;
   cursor: pointer;
   font-family: 'Courier New';
+  z-index: 1;
   
 }
 
@@ -72,7 +73,7 @@
   color: white;
 }
 
-header{
+/* header{
 
     margin: auto;
     padding: 15px;
@@ -82,7 +83,7 @@ header{
     color: navy;
     font-size: 18px;
 
-}
+} */
 
 img{
 
@@ -90,13 +91,17 @@ img{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
-  margin-top: auto;
+  margin-top: 15;
   width: 50%;
   transition: 0.2s;
+  z-index: 1;
 
 }
-header .background{
+header{
 
+    margin: 0;
+    
+    
     background-image: url(../Aufgabe_5/foto/cube_repeat.jpg);
     position:absolute;
     height:400px;
@@ -105,21 +110,28 @@ header .background{
     background-repeat: no-repeat;
     animation-name: fade;
     padding-bottom: 10px ;
-    animation-duration: 5s;
+    animation-duration: 15s;
     animation-iteration-count: infinite;
-    animation-delay: 2s;
-    overflow:hidden;
-
+    animation-delay: 0s;
+    animation-timing-function: ease-in-out;
+    overflow: hidden;
+    z-index: 0;
+    font-size: 18px;
   
 }
+
 .slider{
+
   position: fixed;
-  float: right;
+  right: 1px;
+  top:1px;
   margin: 1%;
   font-family: 'Montserrat';
   font-size: large;
   color: black;
   background-color: orange;
+  z-index: 1;
+
 }
 @keyframes fade {
 	0%      { background-image: url("foto/cube_repeat.jpg"); }  /** fadeIn beginnt            **/
@@ -181,9 +193,11 @@ video{
 
 .main{
 
+  position: initial;
     padding: auto;
     max-width: 800px;
     margin: auto;
+    z-index: 1;
     margin-bottom: 4%;
     font-family: 'Arial';
 
@@ -205,7 +219,7 @@ footer{
 .footerbox{
   
     color: black;
-    font-family:'Comic Sans MS';
+    font-family:'Montserrat';
     width: 50%;
     margin: auto;    
     bottom: 25px;
