--- a/typescript_aufgabe/stylesheet.css
+++ b/typescript_aufgabe/stylesheet.css
@@ -4,9 +4,9 @@
   body{
 
       background-color: #008cffcc;
-      background-image: linear-gradient(rgb(75, 210, 255),rgb(255, 255, 255));
+      background-image: linear-gradient(rgb(0, 191, 255),rgb(255, 175, 83));
       margin: 0;
-
+      
     }
 
   h1,h2,h3,h4,h5,h6{
@@ -31,14 +31,14 @@ img{
 
 header{
 
-    margin: 0;
-    
-    height:400px;
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    padding-bottom: 10px ;
-    font-size: 18px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: auto;
+  margin: auto;
+  min-height: 300px;
+  color: navy;
   
 }
 
@@ -52,6 +52,7 @@ header{
     z-index: 1;
     margin-bottom: 4%;
     font-family: 'Montserrat';
+    text-align: center;
 
 }
 
@@ -61,7 +62,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 175, 83);
+    background-color: rgba(255, 136, 0, 0.007);
     padding: auto;
     margin: auto;
     min-height: 200px;
@@ -81,8 +82,6 @@ footer{
     max-height: 150px;
     margin-right: 2%;
     margin-left: 2%;
-    background: #eaeaea;
-    border: 2px solid black;
 
 
 }
