--- a/Aufgabe_9/drumpad.css
+++ b/Aufgabe_9/drumpad.css
@@ -62,6 +62,14 @@ body{
     align-items: center;
     
 }
-.playbutton{
+.playbutton,.random{
+    background-image: linear-gradient(#9e9e9e,#3a3a3a);
+    width: 150px;
+    height: 150px;
+    border-radius: 8px;
     margin: 1%;
+    padding: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
