--- a/Aufgabe_9/drumpad.css
+++ b/Aufgabe_9/drumpad.css
@@ -63,7 +63,7 @@ body{
     
 }
 .playbutton,.random{
-    background-image: linear-gradient(#9e9e9e,#3a3a3a);
+    background-color: #94cfff;
     width: 150px;
     height: 150px;
     border-radius: 8px;
