--- a/endabgabe/endaufgabe.css
+++ b/endabgabe/endaufgabe.css
@@ -5,7 +5,7 @@ margin: 0;
 padding: 0;
 width: 375px;
 height: 667px;
-background-color: rgb(220, 220, 220);
+background-color: rgb(255, 255, 255);
 
 }
 
@@ -41,7 +41,7 @@ button{
 
     height: 350px;
     width: 375px;
-    background-color:#deb887;
+    background-color:blue ;
     
 
 }
@@ -59,7 +59,7 @@ button{
 
 p{
 
-    padding-top: 20px;
+    padding-top: 20%;
     margin: auto;
     padding: 1%;
     font-family:arial;
@@ -92,4 +92,11 @@ footer{
 float: left;
 position: fixed;
 
+}
+
+@media screen and (max-width:992px) {
+    h1{
+        font-size: 30px;
+        color: #000000;
+    }
 }
