--- a/endabgabe/endaufgabe.css
+++ b/endabgabe/endaufgabe.css
@@ -94,7 +94,7 @@ position: fixed;
 
 }
 
-@media screen and (max-width:992px) {
+@media screen and (max-width:375px) and (max-height:667px) {
     h1{
         font-size: 30px;
         color: #000000;
