--- a/Aufgabe_5/stylesheet.css
+++ b/Aufgabe_5/stylesheet.css
@@ -6,6 +6,7 @@
       background-color: #008cffcc;
       background-image: linear-gradient(rgb(75, 210, 255),rgb(255, 255, 255));
       margin: 0;
+      font-family: Avenir, Arial;
 
     }
 
