--- a/Aufgabe_5/stylesheet.css
+++ b/Aufgabe_5/stylesheet.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900');
-
+  *{
+    margin: 0;
+  }
   body{
 
       background-color: #008cffcc;
